--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,15 +1,16 @@
 *,
-root,
 html {
   padding: 5px;
   box-sizing: border-box;
 }
 
 body {
-  background: #ffffff;
+  background: #fff;
+  font-family: 'Roboto', sans-serif;
 }
 
-.btn_support {
+/* CLIENT PAGE */
+.btn-support {
   float: right;
   width: 153px;
   height: 56px;
@@ -27,20 +28,19 @@ body {
 
   position: absolute;
   bottom: 30px;
-  right: 10px;
+  right: 30px;
   cursor: pointer;
 }
 
-.btn_support:hover {
+.btn-support:hover {
   opacity: 0.9;
 }
 
 .chat {
   display: none;
-  font-family: "Roboto", sans-serif;
 }
 
-.in_support_header {
+.in-support-header {
   float: right;
   width: 320px;
   height: 56px;
@@ -52,131 +52,108 @@ body {
   justify-content: space-between;
 }
 
-.in_support_header span {
+.in-support-header span {
   color: #fff;
   display: flex;
   align-items: center;
+  padding-left: 10px;
 }
 
-.icon_close {
-  align-items: center;
+.icon-close {
   display: flex;
+  align-items: center;
   cursor: pointer;
 }
 
-.chat_support {
+.chat-support {
   position: absolute;
   max-width: 330px;
   right: 10px;
+  transition: all 0.2s;
   animation: up 1s;
 }
 
-.chat_support_hide {
-  animation: down 1s;
-  animation-fill-mode: forwards;
-}
-
-@keyframes up {
-  from {
-    transform: translateY(60vh);
-  }
-  to {
-    transform: translateY(0);
-  }
-}
-
-@keyframes down {
-  from {
-    transform: translateY(0);
-  }
-  to {
-    transform: translateY(100vh);
-  }
+.text-support {
+  border: 1px solid #cec9c9;
+  max-height: 500px;
+  overflow-y: auto;
 }
 
 .client {
   display: flex;
   flex-direction: column;
+  justify-content: flex-end;
 }
 
 .client .name {
   text-align: end;
-}
-
-.client_message {
-  background: #f2ecfa;
-  padding: 20px 10px;
-  margin: 10px 0;
-  width: 250px;
-  margin-left: 30px;
-  border-radius: 4px;
-  line-height: 20px;
+  font-size: 12px;
+  margin-bottom: -12px;
+  padding-right: 10px;
 }
 
 .client .message {
   background: #f2ecfa;
-  /* background: #cecad4; */
-  padding: 20px 10px;
+  padding: 10px;
   margin: 10px 0;
   width: 250px;
   margin-left: 30px;
   border-radius: 4px;
-  line-height: 20px;
+  float: right;
 }
 
-.text_support {
-  border: 1px solid #cec9c9;
-  max-height: 500px;
-  overflow-y: scroll;
-  /* border-bottom: 0px; */
-}
-
-.admin {
+.adminBox {
   display: flex;
   flex-direction: column;
+  border-radius: 4px;
+  border: 0 !important;
+  margin-top: 5px;
 }
 
-.admin .message {
+.admin-name {
+  font-size: 12px;
+  margin-bottom: -8px;
+}
+
+.adminBox .message {
   float: right;
   display: flex;
   flex-direction: column;
   width: 230px;
-  background: #f2ecfa;
+  background: #6F5EAB;
+  color: #fff;
+  border: 0 !important;
   border-radius: 4px;
   padding: 10px;
-  margin-left: 12px;
+  margin-left: 3px;
 }
 
-.message_send {
+.message-send {
   display: flex;
   justify-content: space-between;
   border: 1px solid #cec9c9;
   align-items: center;
 }
 
-.message_send input {
+.message-send input {
   outline: none;
+  border: 1px solid #cec9c9;
+  border-radius: 4px;
   height: 34px;
   align-items: center;
   width: 252px;
 }
 
-.send_message_button {
+.btn-send-message {
   display: flex;
   cursor: pointer;
 }
 
-.line {
-  border: 1px solid #e9e9e9;
-  padding: 0;
-  margin: 0;
-}
-
-.text_help {
+.text-help {
   padding-top: 8px;
 }
 
-.text_help textarea {
+.text-help textarea {
   width: 290px;
   height: 115px;
 
@@ -190,13 +167,22 @@ body {
   resize: none;
 }
 
-.first_email {
+#txtHelp:focus {
+  outline: none;
+}
+
+.charac-remaining {
+  font-size: 10px;
+  float: right;
+}
+
+.first-email {
   display: flex;
   flex-direction: column;
   margin-top: 34px;
 }
 
-.first_email input {
+.first-email input {
   border: 1px solid #dddddd;
   box-sizing: border-box;
   border-radius: 4px;
@@ -204,11 +190,11 @@ body {
   width: 290px;
 }
 
-input[type="text"]:focus {
+input[type='text']:focus {
   outline: 1px solid #a8a8a8;
 }
 
-.btn_start_chat {
+.btn-start-chat {
   width: 121px;
   height: 40px;
 
@@ -219,17 +205,17 @@ input[type="text"]:focus {
   cursor: pointer;
 }
 
-.btn_start_chat:hover {
+.btn-start-chat:hover {
   opacity: 0.8;
 }
 
-.btn_cancel {
+.btn-cancel {
   border: 0;
   cursor: pointer;
   margin-right: 10px;
 }
 
-.button {
+.btn {
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
@@ -237,38 +223,22 @@ input[type="text"]:focus {
   padding: 10px;
 }
 
-#txt_help:focus {
-  outline: 1px solid #a8a8a8;
-}
-
-.charac_remaining {
-  font-size: 10px;
-  float: right;
-}
-
-.date {
-  text-align: right;
-  font-size: 1px;
-}
-
-.btn_atd {
+/* ADMIN PAGE */
+.btn-start-support {
   cursor: pointer;
   color: #fff;
-  background: #b32a2a;
+  background: #8257e6;
   border: none;
+  border-radius: 4px;
   height: 30px;
+  width: max-content;
   padding: 10px;
   display: flex;
   align-items: center;
 }
 
-.btn_atd:hover {
+.btn-start-support:hover {
   opacity: 0.9;
-}
-
-.admin {
-  border: 1px solid #ededed;
-  margin-top: 5px;
 }
 
 .email {
@@ -276,44 +246,74 @@ input[type="text"]:focus {
   width: 350px;
 }
 
-.admin_send_message {
+#supports {
+  width: 600px;
+  margin-top: 15px;
+}
+
+.admin {
+  border: 1px solid #cec9c9;
+  border-radius: 4px;
+  padding: 0;
+}
+
+.in-support-title {
+  background: #8d7aef;
+  width: 589px;
+  margin: -1px 0;
+  padding: 10px;
+  color: #fff;
+  font-size: 17px;
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+}
+
+.admin-list-messages {
+  height: 300px;
+  overflow-y: auto;
+}
+
+.admin-send-message {
   display: flex;
   flex-direction: row;
 }
 
-.admin_send_message input {
-  width: 300px;
+.admin-send-message input {
+  width: 500px;
   margin-right: 10px;
+  border-radius: 4px;
+  border: 1px solid #cec9c9;
+  outline: none;
 }
 
-.admin_send_message button {
-  width: 100px;
+.btn-send {
+  width: 80px;
   cursor: pointer;
+
+  background: #1eb363;
+  color: #eee;
+  border: none;
+  border-radius: 4px;
 }
 
-.admin_list_messages {
-  height: 300px;
-  overflow-y: scroll;
+.btn-send:hover {
+  opacity: 0.8;
 }
 
-.admin_message_admin {
+/* ELEMENTS CREATED IN JS */
+.admin-message-admin {
   width: 300px;
   background: #e0e0e0;
   padding: 10px;
   margin: 12px;
+  float: right;
   display: flex;
   flex-direction: column;
-
   border-radius: 10px;
-
-  font-family: "Roboto", sans-serif;
+  color: #000;
 }
 
-#atendimentos {
-  width: 600px;
-}
-
-.admin_message_client {
+.admin-message-client {
   width: 300px;
   background: #6f5eab;
   padding: 10px;
@@ -321,28 +321,32 @@ input[type="text"]:focus {
   color: #eee;
   display: flex;
   flex-direction: column;
-
   border-radius: 10px;
-  font-family: "Roboto", sans-serif;
 }
 
-.admin_date {
+.admin-date {
+  font-size: 10px;
+  color: #000;
+}
+
+.user-date {
   font-size: 10px;
   color: #fff;
 }
 
-.in_support {
-  background: #8d7aef;
-  color: #fff;
-  font-size: 17px;
+.user-name {
+  text-align: left;
+  font-size: 12px;
+  margin-bottom: -12px;
+  padding-right: 10px;
 }
 
-.btn_send {
-  background: #1eb363;
-  color: #eee;
-  border: none;
-}
-
-.btn_send:hover {
-  opacity: 0.8;
+/* ANIMATIONS */
+@keyframes up {
+  from {
+    transform: translateY(60vh);
+  }
+  to {
+    transform: translateY(0);
+  }
 }
